--- a/assets/css/templatemo-art-factory.css
+++ b/assets/css/templatemo-art-factory.css
@@ -146,8 +146,8 @@ hgroup {
 
 html,
 body {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-family: "Spartan", sans-serif;
+  font-weight: 700;
   background-color: #fff;
   font-size: 16px;
   -ms-text-size-adjust: 100%;
